--- a/cc_gen/ccdesigns/templates/ccdesigns/login.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/login.html
@@ -34,7 +34,7 @@
                     <input type="checkbox" name="checkbox" id="checkbox">
                     <label for="checkbox">keep me signed in</label>
                 </div>
-                <a href="" class="forgot-password">Forgot Password?</a>
+                <a href="{% url 'password_reset' %}" class="forgot-password">Forgot Password?</a>
             </div>
             <input type="submit" value="Log in">
             <div class="horizontal-line">
