--- a/cc_gen/static/style.css
+++ b/cc_gen/static/style.css
@@ -349,6 +349,17 @@ input[type="submit"] {
     text-decoration: none;
     color: #e40606;
 }
+.reset-password {
+    position: absolute;
+    padding: 20px;
+    width: 400px;
+    height: 284px;
+    left: 40%;
+    top: 40%;
+    background:#eeefef;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
 
 /*.eye-icon {
             width: 24px;
