--- a/cc_gen/templates/index.html
+++ b/cc_gen/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>cc-gen</title>
-    {% block st %}{% endblock st %}
+    {% block styles %}{% endblock styles %}
 </head>
 <body>
     
