added profile functionality

--- a/cc_gen/ccdesigns/templates/ccdesigns/home.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/home.html
@@ -83,7 +83,7 @@
     <section class="review">
       <h2 class="header">Clients Review</h2>
       <div class="box">
-        <div><img class="avatar" src="{% static 'images/img_avatar.png' %}" alt=""></div>
+        <div><img class="avatar" src="{% static 'images/default.png' %}" alt=""></div>
         <p>Great design features, user friendly, affordable rate of payment for services and unlimited ways to customize
           credit
           cards.</p>
@@ -91,7 +91,7 @@
 
       </div>
       <div class="box">
-        <div><img class="avatar" src="{% static 'images/img_avatar.png' %}" alt=""></div>
+        <div><img class="avatar" src="{% static 'images/default.png' %}" alt=""></div>
         <p>An awesome platform to design, learn and collaborate with amazing easy to use features</p>
         <p><b>chris, Nigeria</b></p>
 
