--- a/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_confirm.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_confirm.html
@@ -5,9 +5,7 @@
   <h3>Enter your new password</h3>
   <form class="form" action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="btn btn-primary btn-lg btn-block">
-      <i class="icon-lock4"></i> Change Password
-    </button>
+    <button type="submit" class="btn btn-primary btn-lg btn-block">Change Password</button>
   </form>
 </div>
 {% endblock content %}
