--- a/cc_gen/ccdesigns/templates/ccdesigns/home.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/home.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'home.css' %}">{% block content %}
+{% block content %}
 <div class="container">
     {% include 'nav.html' %}
   <main class="main-content">
@@ -9,8 +9,8 @@
         <h1>Make Your Card as Unique as You</h1>
         <p>create,customize and generate credit cards that suits your personality and makes designing more fun at a
           discounted rate.</p>
-        <a class="button">Get Started</a>
-        <a class="linkss linkss2">Explore Card Design</a>
+        <a class="button" href="">Get Started</a>
+        <a class="linkss linkss2" href="#c_card">Explore Card Design</a>
       </div>
       <div class="hero-image width">
         <img src="{% static 'images/c-removebg 1.png' %}" alt="">
@@ -46,7 +46,7 @@
           designs as well
           as and sharing credit card designs to different social media platforms.
           <div>
-            <a class="button" href="">Learn More</a>
+            <a class="button" href="{% url 'about' %}">Learn More</a>
           </div>
         </div>
 
@@ -70,13 +70,15 @@
         </div>
       </div>
     </section>
-    <section class="card-designs">
+    <section  id="c_card" class="card-designs">
       <h2>Card designs</h2>
       <P>Explore various credit card designs</P>
       <div class="cards">
-
-        <div>
-          <a href="" class="button">Explore more designs</a>
+        {% for i in design %}
+        <a href="{% url 'card_detail' i.id %}"><img class="c_card" style="margin: 50px" src="{{ i.design_pic.url}}"></a>
+        {% endfor %}
+        <div style="z-index:1; width: 100%">
+          <a href="{% url 'card-design' %}" class="button">Explore more designs</a>
         </div>
       </div>
     </section>
@@ -103,65 +105,22 @@
           ease..</p>
         <p><b>Aisha, Abuja</b></p>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="newsletter-container">
+      <div class="newsletter-container">
       <div class="newsletter">
         <h2 class="newsletter-header">Our Newsletter</h2>
         <p class="newsletter-text">Subscribe to our newsletter to get more information about our products and amazing
           offers.</p>
         <form .subscribe method="POST">
+          {% csrf_token %}
           <input type="email" name="email" id="email" class="email"placeholder="Email">
           <input class="subscribe-btn" type="submit" value="Subcribe">
         </form>
       </div>
     </div>
-    <div class="footer-links">
-      <h2 class="header">CC_gen</h2>
-      <div style="display: flex; justify-content: space-around;">
-        <div class="about-links hg">
-          <P class="p-tag">About</P>
-          <ul>
-            <li><a href="">Join our team</a></li>
-            <li><a href="">About us</a></li>
-            <li><a href="">Partners</a></li>
-          </ul>
-        </div>
-        <div class="legal hg">
-          <p class="p-tag">Legal</p>
-          <ul>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Copy Right</a></li>
-          </ul>
-        </div>
-        <div class="support hg">
-          <p class="p-tag">Support</p>
-          <ul>
-            <li><a href="">Contact us</a></li>
-            <li><a href="">Publisher</a></li>
-            <li><a href="">Help/FAQs</a></li>
-            <li><a href="">Accessibility</a></li>
-          </ul>
-        </div>
-        <div class="social-links hg">
-          <p class="p-tag">Quicklinks</p>
-          <ul>
-            <li><a href=""><img src="{% static 'images/social icons/Group.svg' %}" alt="">Facebook</a></li>
-            <li><a href=""><img src="{% static 'images/social icons/akar-icons_instagram-fill.svg' %}" alt="">Instagram</a></li>
-            <li><a href=""><img src="{% static 'images/social icons/akar-icons_twitter-fill.svg' %}" alt="">Twitter</a></li>
-            <li><a href=""><img src="{% static 'images/social icons/jam_behance-circle.svg' %}" alt="">Behance</a></li>
-          </ul>
-        </div>
-
-      </div>
-      <p class="p-tag lg">Copyright © 2022-2023 CC_Gen Ltd (Nigeria). All Rights Reserved</p>
-    </div>
-  </footer>
+    </section>
+  </main>
+  {% include 'footer.html' %}
+  
   </div>
-
-  </div>
-</div>
 
 {% endblock content %}
