--- a/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset.html
@@ -4,15 +4,22 @@
 <link rel="stylesheet" href="{% static 'reset-password.css' %}">
 {% endblock styles %}  {% endcomment %}
 {% block content %}
-<div class="container">
 {% include 'nav.html' %}
-<div class="reset-password">
-<h2>Reset Password</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">submit</button>
-</form>
-</div>
-</div>
+<div  class="edit-profile-container">
+        <div class="edit-profile" style=" margin: auto; height: 70vh;">
+            <h2>Reset Password</h2>
+            <p>We will email you instructions to reset the password</p> 
+            <form class="update-form" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form  %}
+                <div class="input-field">
+                    <label>{{field.label}}:</label>
+                    {{field}}
+                </div>
+                {% endfor %}
+                <input type="submit" value="Reset Password">
+            </form>
+        </div>
+    </div>
+    {% include 'footer.html' %}
 {% endblock content %}
