--- a/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_confirm.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_confirm.html
@@ -1,11 +1,22 @@
 {% extends 'index.html' %} {% load static %} {% block content %}
 <div class="container">
   {% include 'nav.html' %}
-  <h2>Reset Password</h2>
-  <h3>Enter your new password</h3>
-  <form class="form" action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %} {{ form.as_p }}
-    <button type="submit" class="btn btn-primary btn-lg btn-block">Change Password</button>
-  </form>
+  <div class="edit-profile-container">
+        <div class="edit-profile">
+          <h2>Reset Password</h2>
+          <h3>Enter your new password</h3>
+            <form class="update-form" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form  %}
+                <div class="input-field">
+                    <label>{{field.label}}:</label>
+                    {{field}}
+                </div>
+                {% endfor %}
+                <input type="submit" value="Change Password">
+            </form>
+        </div>
+    </div>
+    {% include 'footer.html' %}
 </div>
 {% endblock content %}
