--- a/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_done.html
+++ b/cc_gen/ccdesigns/templates/ccdesigns/password-reset/password_reset_done.html
@@ -1,11 +1,15 @@
 {% extends 'index.html' %} {% load static %}
 {% block content %}
-<div class="container">
-  {% include 'nav.html' %}
-  <h2>Reset Password</h2>
-  <p>
-    We have sent you reset password link on your email. Please Check Your Email.
-  </p>
-  <a href="{% url 'login' %}">Back to Login Page</a>
-</div>
+{% include 'nav.html' %}
+  <div  class="edit-profile-container">
+        <div style=" margin: auto; height: 50vh;" class="edit-profile">
+    
+            <h2>Reset Password</h2>
+            <p>We have sent you reset password link on your email. Please Check Your Email.</p>
+            <a href="{% url 'login' %}">Back to Login Page</a>
+          </div>
+          </div>
+        </div>
+    </div>
+{% include 'footer.html' %}
 {% endblock content %}
