--- a/cc_gen/static/css/style.css
+++ b/cc_gen/static/css/style.css
@@ -2,6 +2,14 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Roboto:wght@400;700&display=swap");
 
+:root {
+    --bold-font: 700;
+    --primary-color: #03045e;
+    --secondary-color: #f1f1f1;
+    --transition: 0.3s;
+    --font-family: "Roboto";
+}
+
 .login-page {
     background: url("../images/Group642.png") no-repeat;
 }
@@ -21,7 +29,7 @@
     width: 100%;
     height: 120px;
     padding: 0 40px;
-    background: #03045e;
+    background: var(--primary-color);
 }
 
 .logo {
@@ -39,7 +47,6 @@
     flex-direction: row;
     align-items: center;
     padding: 0px;
-    gap: 10px;
     width: 202px;
     height: 56px;
 }
@@ -82,7 +89,7 @@
 .nav a {
     width: 97px;
     height: 28px;
-    font-family: "Roboto";
+    font-family: var(--font-family);
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -95,15 +102,23 @@
     padding: 10px 25px;
     width: 118px;
     height: 43px;
-    border: 1.5px solid #ffffff;
+
+    border: 1.5px solid #FFFFFf;
     border-radius: 20px;
     font-family: "Roboto";
     font-style: normal;
     font-size: 18px;
+    background: #03034e;
     font-weight: 700;
-    color: #ffffff;
+    color: #FFFFFF;
     text-decoration: none;
     text-align: center;
+    transition: var(--transition);
+}
+
+.signup:hover {
+    background: #FFFFFF;
+    color: #03034e;
 }
 
 .content-container {
@@ -166,15 +181,12 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
-    color: #555a62;
     border: none;
     background: inherit;
 }
-input:focus{
-    border: none;
-    background: inherit;
+.input input:focus{
+    outline: none;
 }
-
 .input label {
     font-family: "Roboto";
     font-style: normal;
@@ -371,4 +383,440 @@ label img {
     height: 15px;
     position: absolute;
     right: 0;
+}
+
+.card-container {
+    display: grid;
+    grid-template-columns: 2.5fr 1.5fr;
+}
+
+.card-item {
+    padding: 60px 20px 20px;
+}
+
+.card-item-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 540px;
+    border-radius: 30px;
+    margin: auto;
+    width: 90%;
+    background: #E7EEFF;
+}
+
+.card-item-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    max-width: 377px;
+}
+
+.card-item-text h3 {
+    margin: 0;
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 82px;
+}
+
+.card-item-text p {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.download-btn {
+    max-width: 377px;
+    margin: 30px 0;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    background: #03045E;
+    border-radius: 10px;
+}
+
+.download-btn a {
+    vertical-align: 7px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.explore {
+    margin: 20px 0;
+    border-bottom: 1px solid #A8A8A8;
+    ;
+}
+
+.explore img {
+    display: block;
+    margin: 20px 0;
+}
+
+.comment-section {
+    width: 90%;
+    margin: auto;
+    font-family: 'Roboto';
+    font-style: normal;
+
+}
+
+.comment {
+    display: flex;
+    margin: 20px 0;
+    padding: 20px;
+    background: #ebecff;
+    border-radius: 30px;
+
+}
+
+.comment img {
+    width: 70px;
+    height: 70px;
+    margin-right: 10px;
+}
+
+
+.comment p {
+    margin: 0;
+}
+
+.comment-form {
+    width: 90%;
+    margin: auto;
+    position: relative;
+}
+
+.comment-form input {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    padding: 20px 10px 20px 60px;
+    width: 100%;
+    border: 1px solid #000000;
+    border-radius: 30px;
+}
+
+.img {
+    position: absolute;
+    top: 19px;
+    left: 20px;
+}
+
+.comment-count {
+    width: 90%;
+    margin: auto;
+}
+
+.comment-count b {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+/* about-us page */
+
+.hero-img {
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/unspalsh.jpg");
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    color: #FFFFFF;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.hero-text p {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 23px;
+}
+
+.hero-text h1 {
+    line-height: 70px;
+    font-size: 60px;
+    line-height: 70px;
+}
+
+.detail {
+    height: auto;
+    background: #D8D9FF;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 30px;
+}
+
+.detail-text {
+    max-width: 600px;
+    padding: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #03045E;
+
+}
+
+.our-team-wrapper {
+    padding: 40px 20px;
+    text-align: center;
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+.our-team-wrapper h1 {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 41px;
+    color: #03045E;
+}
+
+.our-team {
+
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+}
+
+.our-team-detail {
+    padding: 10px;
+    margin: 15px;
+    background: #FFFFFF;
+    border: 2px solid #02034E;
+}
+
+.name {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+/* profile page */
+.profile-page-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    padding: 50px 20px;
+}
+
+.profile-page-item {
+    padding: 10px;
+}
+
+.profile-info {
+    text-align: center;
+    padding: 30px;
+    background: #D8D9FF;
+    border: 2px solid #03045E;
+    border-radius: 30px;
+}
+
+.profile-info a {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    text-decoration: none;
+}
+
+.profile-info a:hover {
+    text-decoration: underline;
+}
+
+.username {
+    font-family: 'Roboto';
+    font-style: normal;
+
+}
+
+.username h2 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+}
+
+.username i {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+.p-details-container {
+    font-family: 'Roboto';
+    font-style: normal;
+    margin-top: 20px;
+    padding: 20px;
+    text-align: left;
+    background: #FFFFFF;
+    border-radius: 10px;
+}
+
+.p-details {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 20px;
+    line-height: 23px;
+}
+
+.p-details p {
+
+    display: inline-block;
+}
+
+.p-details span {
+    margin-left: 20px;
+}
+
+.bd {
+    border-bottom: 2px solid #03045E;
+}
+
+.hello-user {
+    width: 90%;
+    text-align: center;
+    background: #D8D9FF;
+    border: 2px solid #03045E;
+    border-radius: 20px;
+}
+
+.hello-user p {
+    font-variant: small-caps;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+}
+
+.about-me {
+    width: 90%;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    padding: 20px 20px 50px;
+    margin: 20px 0;
+    background: #D8D9FF;
+    border: 2px solid #03045E;
+    border-radius: 20px;
+}
+
+.about-me a {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    padding: 10px;
+    text-decoration: none;
+    background: #78BBD4;
+    border: 1px solid #03045E;
+    border-radius: 20px;
+}
+
+.explore-btn {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.explore-btn a {
+    text-decoration: none;
+    color: #000000
+}
+
+.explore-btn p {
+    margin-bottom: 0;
+}
+
+/* edit profile */
+
+.edit-profile-container {
+    padding: 40px;
+}
+
+.edit-profile {
+    height: auto;
+    padding: 30px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px 15px rgba(0, 0, 0, 0.15);
+    margin: auto;
+    width: 50%;
+    max-width: 600px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 19px;
+}
+
+.edit-profile img {
+    margin: auto;
+    display: block;
+}
+
+.update-form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.input-field {
+
+    padding: 10px 0;
+    width: 100%;
+    margin: 15px 0;
+    border-bottom: 2px solid #03045E;
+}
+
+.input-field input {
+    border: none;
+}
+
+
+.input-field textarea {
+    border: none;
+}
+
+.input-field textarea:focus,
+.input-field input:focus {
+    outline: none;
+    font-size: 18px;
+}
+
+.update-form input[type=submit] {
+    width: 40%;
+    padding: 17px 0;
+    margin: 20px auto;
+    background: #5053BD;
+    border-radius: 30px;
+    color: #FFFFFf;
+    border: none;
+}
+
+.edit-profile a {
+    text-decoration: none;
+}
+.edit-profile a:hover {
+    text-decoration: underline;
 }
