--- a/cc_gen/templates/nav.html
+++ b/cc_gen/templates/nav.html
@@ -2,22 +2,23 @@
 
 <div class="nav-container">
     <div class="logo">
-        <div class="logo-container">
+        <a style="text-decoration: none;" href="{%  url 'home' %}"><div class="logo-container">
             <h1>cc_gen</h1>
             <img src="{% static '\images\Vector.png' %}" alt="logo">
-        </div>
+            
+        </div></a>
     </div>
     <div>
         <ul class="nav">
-            <li><a href="">About us</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="{% url 'about' %}">About us</a></li>
+            <li><a href="{% url 'card-design' %}">Product</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
     </div>
     <div>
     {% if request.user.is_authenticated  %}
-    <a class="signup" href="{% url 'logout' %}">log-out</a>
-    <a href="{% url 'profile-page' %}"> <img class="avatar mg-l" src="{{ user.profile.image.url}}" alt=""></a>
+    <a class="signup" href="{% url 'logout' %}">log out</a>
+    <a href="{% url 'profile-page' user.id %}"> <img class="avatar mg-l" src="{{ user.profile.image.url}}" alt=""></a>
     {% else %}
     <a class="signup" href="{% url 'login' %}">login</a>
     {% endif %}
